[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/sprites/Proportionate-Male-Raster-Version-Censored.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/Main_Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/magnifying-glass.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/shield.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/organHeart.png" type="Texture" id=5]
[ext_resource path="res://assets/scenes/MainScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sprites/bg-heart-frame.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Animation" id=12]
resource_name = "Disappearing"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Heart_Animation:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Heart_Frame:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Heart_Bg:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "Showing"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Heart_Frame:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Heart_Animation:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Heart_Bg:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
heart_stage_scene = ExtResource( 6 )
arrow = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]
pause_mode = 2

[node name="Body" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="Body"]
position = Vector2( 400, 392 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
vframes = 2
hframes = 36
frame = 9

[node name="Body2" type="Sprite" parent="Body"]
position = Vector2( 456, 392 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
vframes = 2
hframes = 36
frame = 10

[node name="Body3" type="Sprite" parent="Body"]
position = Vector2( 512, 392 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
vframes = 2
hframes = 36
frame = 11

[node name="Body4" type="Sprite" parent="Body"]
position = Vector2( 568, 392 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
vframes = 2
hframes = 36
frame = 12

[node name="Body5" type="Sprite" parent="Body"]
position = Vector2( 624, 392 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
vframes = 2
hframes = 36
frame = 13

[node name="Heart" type="Control" parent="."]
margin_left = 24.0
margin_top = -24.0
margin_right = 64.0
margin_bottom = 16.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart_Bg" type="Sprite" parent="Heart"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 580.079, 225.701 )
scale = Vector2( 0.742589, 0.748967 )
texture = ExtResource( 7 )

[node name="Heart_Animation" type="AnimatedSprite" parent="Heart"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 576, 224 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
frame = 1
playing = true

[node name="Heart_Frame" type="Sprite" parent="Heart"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 576, 224 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Heart"]
anims/Disappearing = SubResource( 12 )
anims/Showing = SubResource( 13 )

[node name="Heart_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Heart_Area"]
position = Vector2( 544, 296 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
position = Vector2( 512, 360 )
current = true
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="input_event" from="Heart_Area" to="." method="_on_Heart_Area_input_event"]
[connection signal="mouse_entered" from="Heart_Area" to="." method="_on_Heart_Area_mouse_entered"]
[connection signal="mouse_exited" from="Heart_Area" to="." method="_on_Heart_Area_mouse_exited"]
